--- a/contact-form-thank-you.html
+++ b/contact-form-thank-you.html
@@ -1,30 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"> 
+<!DOCTYPE HTML>
 <html>
 <head>
 	<title>Thank you!</title>
-<!-- define some style elements-->
-<style>
-h1
-{
-	font-family : Arial, Helvetica, sans-serif;
-	font-size : 16px;
-    font-weight : bold;
-}
-label,a,body
-{
-	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px; 
-}
-
-</style>	
+	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,300,400italic,900,700,700italic,900italic,300italic,100italic,100' rel='stylesheet' type='text/css'>
 <!-- a helper script for vaidating the form-->
-</head>	
 </head>
 
 <body>
-<h1>Thank you!</h1>
-Thank you for submitting the form. We will contact you soon!
-
-
+	<h1 style="color:black">Thank you!</h1>
+	<h2 style="color:black">Thank you for sending me a message. I will contact you soon!</h2>
+	<a style="color:black; font-size: 0.8em;" href="index.php"><h3>Back</h3></a>
 </body>
 </html>
