--- a/contact-form-thank-you.html
+++ b/contact-form-thank-you.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-	<h1 style="color:black">Thank you!</h1>
-	<h2 style="color:black">Thank you for sending me a message. I will contact you soon!</h2>
+	<h1 style="color:black">Thanks!</h1>
+	<h2 style="color:black">I appreciate your message! I will be in contact soon.</h2>
 	<a style="color:black; font-size: 0.8em;" href="index.php"><h3>Back</h3></a>
 </body>
 </html>
